# py-cca

./: .gitignore  README.md  pyproject.toml
cca_py/: __init__.py  anndata_adapter.py  cca.py
examples/: _benchmark.R  _benchmark.py  _build_notebook.py  _pbmc_compare_and_plot.py  _pbmc_make_two_batches.py  _pbmc_seurat_cca.R  seurat_parity_pbmc.ipynb
tests/: r_parity_dump.R  test_r_parity.py  test_smoke.py
