[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-CCA"
version = "0.1.0"
description = "Pure-Python re-implementation of Seurat's CCA — canonical correlation analysis for single-cell integration, AnnData-native."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Zehua Zeng", email = "starlitnightly@163.com" },
]
keywords = [
    "single-cell", "scRNA-seq", "seurat", "cca",
    "canonical-correlation", "integration", "batch-effect",
    "anchors", "scanpy", "anndata",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
anndata = ["anndata>=0.9"]
dev = ["pytest>=7", "pytest-cov", "ruff"]

[project.urls]
Homepage = "https://github.com/omicverse/py-CCA"
Repository = "https://github.com/omicverse/py-CCA"
Issues = "https://github.com/omicverse/py-CCA/issues"
"Upstream (omicverse)" = "https://github.com/Starlitnightly/omicverse"

[tool.setuptools.packages.find]
include = ["cca_py*"]
exclude = ["tests*", "examples*", "refs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
    "ignore::RuntimeWarning",
]
